fix buttons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,6 +243,7 @@ p {
    
     .box {
         margin: 20px 0 20px 0;
+        width: 410px;
     }
 
     .header nav ul li {
@@ -265,9 +266,13 @@ p {
 
     }
 
+    .bio img {
+        justify-content: center;
+    }
+
     .bio p {
         display: flex;
-        padding-left: none;
+        padding-left: 0;
         flex-wrap: wrap;
     }
 
@@ -276,7 +281,7 @@ p {
         flex-direction: column;
         align-items: center;
         padding-top: 20px;
-        padding-left: none;
+        padding-left: 0;
         
 
 
@@ -295,8 +300,9 @@ p {
 
     .buttons {
         justify-content: flex-start;
-        width: 100%;
     }
+
+    
     .socials {
         display: flex;
         flex-direction: column;
@@ -311,8 +317,7 @@ p {
 
     .icons {
         padding-top: 20px;
-        justify-content: space-evenly;
-        width: fit-content;
+        justify-content: center;
     }
 
         
@@ -322,5 +327,8 @@ p {
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
   @media screen and (max-width: 575px) {
 
-  }
-      
+    .box {
+        width: 375px;
+    }
+
+}
